--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ ul{
     padding-right: 15px;
 }
 .section{
+    
     padding-top: 300px;
     padding-bottom: 300px;
     margin: 0;
@@ -129,4 +130,7 @@ a{
     line-height: 38px;
     letter-spacing: 0.055em;
     
+}
+.is-hiden{
+    margin-top: 300px;
 }
