--- a/style.css
+++ b/style.css
@@ -251,3 +251,14 @@ display: flex;
 .card123{
     display: flex;
 }
+.input{
+    margin-left: 400px;
+margin-top: -100px;
+font-family: 'Imprima';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.055em;
+    color:aliceblue;
+}
